recommendationservice-vs-503.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: recommendationservice-503
spec:
  hosts:
    - recommendationservice
  http:
    - route:
        - destination:
            host: recommendationservice
      fault:
        abort:
          percentage:
            value: 100
          httpStatus: 503
