recommendationservice-vs-delay.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: recommendationservice-delay
spec:
  hosts:
  - recommendationservice
  http:
    - route:
        - destination:
            host: recommendationservice
      fault:
        delay:
          percent: 100
          fixedDelay: 10s
